fix(styles): fixed overflow stuff

--- a/styles/createMap.module.scss
+++ b/styles/createMap.module.scss
@@ -1,8 +1,8 @@
 .createMapComponent {
-    overflow: hiden; //check if this works
-    position: fixed;
+    overflow: hidden; 
     margin-top: 5%;
     margin-left: 15%;
+    padding-bottom: 5em;
     width: 60%;
 
     // .flagsList {
