--- a/styles/register.module.scss
+++ b/styles/register.module.scss
@@ -1,7 +1,7 @@
 .registerComponent {
-    overflow: hiden; //check if this works
-    position: fixed;
+    overflow:hidden; 
     margin-top: 5%;
     margin-left: 15%;
     width: 60%;
+    padding-bottom: 5em;
 }
